errorstack/tests/compile_fail/tuple_variant.rs
use errorstack::ErrorStack;

#[derive(ErrorStack)]
enum Bad {
    Oops(String),
}

fn main() {}
